all in one page

--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -645,11 +645,11 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-<script src="bootstrap-input-spinner.js"></script>
+<!--<script src="bootstrap-input-spinner.js"></script>-->
 
-<script>
-    $('input[type=number]').inputSpinner();
-</script>
+<!--<script>-->
+<!--    $('input[type=number]').inputSpinner();-->
+<!--</script>-->
 
 <!--<script th:src="@{js/main.js}" src="../../static/js/main.js"></script>-->
 <!--<script type="text/javascript" src="/js/main.js"></script>-->
@@ -705,6 +705,10 @@
         });
     });
 </script>
+
+
+
+<script type="text/javascript" src="/js/main.js"></script>
 
 </body>
 </html>
