--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -710,5 +710,10 @@
 
 <script type="text/javascript" src="/js/main.js"></script>
 
+<!--<script>-->
+<!--    console.log("Hello from our JS")-->
+<!--</script>-->
+
+
 </body>
 </html>
