js script can run

--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -618,10 +618,10 @@
 <br>
 <hr>
 
-<!--<a th:href="@{/people/new}">create new user</a>-->
-<form th:action="@{/admin/new}">
-    <input type="submit" value="CREATE NEW"/>
-</form>
+<div id="breed">
+
+</div>
+
 <!--<br>-->
 <!--<form th:action="@{/logout}">-->
 <!--    <input type="submit" value="LOGOUT"/>-->
@@ -710,9 +710,7 @@
 
 <script type="text/javascript" src="/js/main.js"></script>
 
-<!--<script>-->
-<!--    console.log("Hello from our JS")-->
-<!--</script>-->
+
 
 
 </body>
