--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -618,9 +618,18 @@
 <br>
 <hr>
 
-<div id="breed">
+<div id="breed33">
 
 </div>
+<p>===================================</p>
+<div class="people-list">
+
+</div>
+<p>===================================</p>
+<div id="people-list">
+
+</div>
+<p>===================================</p>
 
 <!--<br>-->
 <!--<form th:action="@{/logout}">-->
