--- a/src/main/resources/templates/people/show.html
+++ b/src/main/resources/templates/people/show.html
@@ -95,38 +95,11 @@
                                             <div class="row">
                                                <div class="col">
 
-                                                    <table class="table table-hover table-striped">
-                                                            <thead>
-                                                            <tr>
-                                                                <th>ID</th>
-                                                                <th>First Name</th>
-                                                                <th>Last Name</th>
-                                                                <th>Age</th>
-                                                                <th>Email</th>
-                                                                <th>Role</th>
-                                                            </tr>
+                                                   <div id="user-table-list">
 
-                                                            </thead>
+<!--                                                                        ============ insert FETCH USER TABLE ============== -->
 
-                                                            <tbody>
-                                                            <tr style="background-color: #f2f2f2">
-                                                                <td th:utext="${person.getId()}">..</td>
-                                                                <td th:utext="${person.getName()}">..</td>
-                                                                <td th:utext="${person.getSurname()}">..</td>
-                                                                <td th:utext="${person.getAge()}">..</td>
-                                                                <td th:utext="${person.getEmail()}">..</td>
-                                                                <td>
-                                                        <span th:each="roleInList, iStat : ${person.getRoles()}"
-                                                              th:text="!${iStat.last} ?
-                                                        (${#strings.substring(roleInList.role,5)} + ' ')
-                                                        : (${#strings.substring(roleInList.role,5)})">
-                                                        </span>
-                                                                </td>
-                                                            </tr>
-
-                                                            </tbody>
-
-                                                    </table>
+                                                   </div>
 
                                                 </div>
                                             </div>
@@ -177,6 +150,8 @@
         });
     });
 </script>
+
+<script type="text/javascript" src="/js/user.js"></script>
 
 </body>
 </html>
