--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -58,12 +58,6 @@
         <div class="col-lg-2 px-0">
             <div>
                 <br>
-<!--                <ul class="list-group">-->
-
-<!--                    <li type="button" onclick="location.href='/admin'" class="list-group-item active" >Admin</li>-->
-<!--                    <li type="button" onclick="location.href='/user'" class="list-group-item" >User</li>-->
-
-<!--                </ul>-->
 
                 <div class="list-group" id="list-tab" role="tablist">
                     <a class="list-group-item list-group-item-action active" id="list-admin-list" data-toggle="list" href="#list-admin" role="tab" aria-controls="admin">Admin</a>
@@ -128,12 +122,12 @@
                                                         <div class="row">
                                                             <div class="col">
 
-                                                                <div id="main-table-list">
+                                                                <div class="main-table-list">
 
 
 
 
-<!--                                                                        ============ insert FETCH MAIN TABLE ============== -->
+<!-- =================================== insert FETCH MAIN TABLE ========================================= -->
 
 
 
@@ -187,36 +181,36 @@
 
                                                                 <div class="myFormNew">
 
-                                                                    <form th:method="POST" th:action="@{/admin}" th:object="${person2}">
+                                                                    <form class="add-user-form">
 
                                                                         <div class="form-group col-sm-4 py-0" align="center">
                                                                             <label for="nameNew" class="col-form-label font-weight-bold py-0"> First name </label>
-                                                                            <input type="text" class="form-control py-0" th:field="*{name}" id="nameNew" name="name" required/>
+                                                                            <input type="text" class="form-control py-0" id="nameNew" name="name" required/>
                                                                         </div>
 
 
                                                                         <div class="form-group col-sm-4 py-0" align="center">
                                                                             <label for="surnameNew" class="col-form-label font-weight-bold py-0"> Last Name </label>
-                                                                            <input type="text" class="form-control py-0" th:field="*{surname}" id="surnameNew" name="surname" required/>
+                                                                            <input type="text" class="form-control py-0" id="surnameNew" name="surname" required/>
                                                                         </div>
 
 
                                                                         <div class="form-group col-sm-4 py-0" align="center">
                                                                             <label for="ageNew" class="col-form-label font-weight-bold py-0"> Age </label>
-                                                                            <input type="number" class="form-control py-0" th:field="*{age}" min="0" max="200" step="1" id="ageNew" name="age" required/>
+                                                                            <input type="number" class="form-control py-0" min="0" max="200" step="1" id="ageNew" name="age" required/>
 
                                                                         </div>
 
 
                                                                         <div class="form-group col-sm-4 py-0" align="center">
                                                                             <label for="emailNew" class="col-form-label font-weight-bold py-0"> Email </label>
-                                                                            <input type="text" class="form-control py-0" th:field="*{email}" id="emailNew" name="email" required/>
+                                                                            <input type="text" class="form-control py-0" id="emailNew" name="email" required/>
                                                                         </div>
 
 
                                                                         <div class="form-group col-sm-4 py-0" align="center">
                                                                             <label for="passwordNew" class="col-form-label font-weight-bold py-0"> Password </label>
-                                                                            <input type="text" class="form-control py-0" th:field="*{password}" id="passwordNew" name="password" required/>
+                                                                            <input type="text" class="form-control py-0" id="passwordNew" name="password" required/>
                                                                         </div>
 
 
@@ -226,13 +220,13 @@
 
 
                                                                             <select class="form-control" multiple name="roles" id="rolesNew" size="2">
-                                                                                <option th:field="*{roles}" th:value="'ROLE_ADMIN'" th:text="ADMIN"></option>-->
-                                                                                <option th:field="*{roles}" th:value="'ROLE_USER'" th:text="USER"></option>
+                                                                                <option >ADMIN</option>-->
+                                                                                <option >USER</option>
                                                                             </select>
 
                                                                         </div>
 
-                                                                        <button type="submit" class="btn btn-success">Add new user</button>
+                                                                        <button type="submit" class="btn btn-success" onclick="window.location.href='#home'">Add new user</button>
                                                                     </form>
 
                                                                 </div>
@@ -302,7 +296,7 @@
 
                                                         <div id="user-table-list">
 
-<!--                                                                        ============ insert FETCH USER TABLE ============== -->
+<!-- =============================== insert FETCH USER TABLE ======================================= -->
 
                                                         </div>
 
@@ -361,9 +355,9 @@
 
 <div class="myFormEdit">
 
-    <form  method="POST" th:id="'form'+''">
+    <form  method="POST" >
 
-        <div class="modal fade" th:id="'editModal'+''" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+        <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -439,7 +433,7 @@
 
     <form method="DELETE">
 
-    <div class="modal fade" th:id="'deleteModal'+''" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
