--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -122,7 +122,10 @@
                                                         <div class="row">
                                                             <div class="col">
 
+
+
                                                                 <div class="main-table-list">
+
 
 
 
@@ -226,7 +229,7 @@
 
                                                                         </div>
 
-                                                                        <button type="submit" class="btn btn-success" onclick="window.location.href='#home'">Add new user</button>
+                                                                        <button type="submit" class="btn btn-success"> Add new user </button>
                                                                     </form>
 
                                                                 </div>
