--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -153,6 +153,12 @@
 
                                 <!--            ++++ main table ++++-->
 
+
+
+
+
+
+
                             </div>
 
 
@@ -353,7 +359,7 @@
 
 
 
-<!--                                                                            th:onclick="|window.location.href='@{/admin/edit/(id=${person.id})}'|"-->
+
 <!--        ============ modal edit ============-->
 
 <div class="myFormEdit">
@@ -413,7 +419,7 @@
                         </div>
                     </div>
 
-                    <div class="modal-footer">
+                    <div class="modal-footer" id="">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         <button type="submit" class="btn btn-primary" data-dismiss="modal" id="edit-inside-modal"> Edit </button>
 <!--                        <input type="submit" class="btn btn-primary" id="edit-inside-modal" value="Edit" />-->
@@ -430,7 +436,7 @@
 
 
 
-<!--                                                                            th:onclick="|window.location.href='@{/admin/delete/(id=${person.id})}'|"-->
+
 <!--        ============ modal delete ============-->
 
 <div class="myFormDelete">
