works Add New + roles

--- a/src/main/resources/templates/people/index.html
+++ b/src/main/resources/templates/people/index.html
@@ -229,8 +229,8 @@
 
 
                                                                             <select class="form-control" multiple name="roles" id="rolesNew" size="2">
-                                                                                <option >ADMIN</option>-->
-                                                                                <option >USER</option>
+                                                                                <option value='ROLE_ADMIN'>ADMIN</option>
+                                                                                <option value='ROLE_USER'>USER</option>
                                                                             </select>
 
                                                                         </div>
@@ -409,8 +409,8 @@
 
                                 <select class="form-control" multiple name="roles" id="rolesEdit" size="2">
 
-                                    <option ></option>
-                                    <option ></option>
+                                    <option value="'ROLE_ADMIN'">ADMIN</option>
+                                    <option value="'ROLE_USER'">USER</option>
 
                                 </select>
 
@@ -480,8 +480,8 @@
                             <label for="rolesDelete" class="col-form-label font-weight-bold">Role</label>
 
                             <select class="form-control" multiple name="roles" id="rolesDelete" size="2" disabled>
-                                <option ></option>
-                                <option ></option>
+                                <option value="'ROLE_ADMIN'">ADMIN</option>
+                                <option value="'ROLE_USER'">USER</option>
                             </select>
 
                         </div>
